syntax = "proto3";

package restaurant_service;

import "google/protobuf/empty.proto";

message Restaurant {
    uint64 res_id = 1;
    string name = 2;
    double rating = 3;
    repeated string cuisines = 4;
    double cost_for_two = 5;

    message Point {
        double lat = 1;
        double long = 2;
    }

    string opening_time = 6;
    string closing_time = 7;
    Point coordinates = 8;
}

service RestaurantService {
    rpc AddRestaurant(Restaurant) returns (google.protobuf.Empty) {}
    rpc EditRestaurant(Restaurant) returns (google.protobuf.Empty) {}
    rpc DeleteRestaurant(Restaurant) returns (google.protobuf.Empty) {}
    rpc GetAllRestaurant(google.protobuf.Empty) returns (stream Restaurant) {}
}